--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "heroku-postbuild": "clap build"
   },
   "dependencies": {
+    "babel-eslint": "^8.2.3",
     "bluebird": "^3.4.6",
     "car-query": "^1.0.4",
     "electrode-archetype-react-app": "^5.0.0",
@@ -46,6 +47,7 @@
     "express": "^4.0.0",
     "global": "^4.3.2",
     "lodash": "^4.10.1",
+    "prettier-eslint": "^8.8.1",
     "react-notify-toast": "^0.4.1"
   },
   "devDependencies": {
