--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "global": "^4.3.2",
     "lodash": "^4.10.1",
     "prettier-eslint": "^8.8.1",
-    "react-notify-toast": "^0.4.1"
+    "react-notify-toast": "^0.4.1",
+    "watchman": "^1.0.0"
   },
   "devDependencies": {
     "electrode-archetype-react-app-dev": "^5.0.0"
