--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "keywords": [],
   "repository": {
     "type": "git",
-    "url": "abasalilov/electrode"
+    "url": "abasalilov"
   },
   "license": "MIT",
   "engines": {
